# js-framework-benchmark

./: create-new-xilem_web-bench.sh
frameworks/non-keyed/xilem_html-main/: Cargo.toml  Trunk.toml
frameworks/non-keyed/xilem_html-main-better_diffing/: Cargo.toml  Trunk.toml
frameworks/non-keyed/xilem_html-main-better_diffing-cached/: Cargo.toml  Trunk.toml
frameworks/non-keyed/xilem_html-main-better_diffing-cached-templates/: Cargo.toml  Trunk.toml  index.html
frameworks/non-keyed/xilem_html-main-better_diffing-cached-templates/bundled-dist/: js-framework-benchmark-non-keyed-xilem_html-main.js  js-framework-benchmark-non-keyed-xilem_html-main_bg.wasm
frameworks/non-keyed/xilem_html-main-better_diffing-cached-templates/src/: main.rs
frameworks/non-keyed/xilem_html-main-better_diffing-cached/bundled-dist/: index.html  (+2 more)
frameworks/non-keyed/xilem_html-main-template/: Cargo.toml  Trunk.toml  index.html  trunk.html
frameworks/non-keyed/xilem_html-main/bundled-dist/: index.html  js-framework-benchmark-non-keyed-xilem_html-main.js  js-framework-benchmark-non-keyed-xilem_html-main_bg.wasm
frameworks/non-keyed/xilem_html-main/src/: main.rs
frameworks/non-keyed/xilem_html-strong-typed/: Cargo.toml  Trunk.toml  index.html
frameworks/non-keyed/xilem_html-strong-typed-better_diffing-cached-templates/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
frameworks/non-keyed/xilem_html-strong-typed-cow/: Cargo.toml  Trunk.toml
frameworks/non-keyed/xilem_html-strong-typed-cow/bundled-dist/: index.html  js-framework-benchmark-non-keyed-xilem_html-strong-typed-cow.js  js-framework-benchmark-non-keyed-xilem_html-strong-typed-cow_bg.wasm
frameworks/non-keyed/xilem_html-strong-typed-cow/src/: main.rs
frameworks/non-keyed/xilem_html-strong-typed-memoize/: Cargo.toml  Trunk.toml  index.html
frameworks/non-keyed/xilem_html-strong-typed/bundled-dist/: js-framework-benchmark-non-keyed-xilem_html-strong-typed.js  js-framework-benchmark-non-keyed-xilem_html-strong-typed_bg.wasm
frameworks/non-keyed/xilem_html-strong-typed/src/: main.rs
frameworks/non-keyed/xilem_web/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  trunk.html
frameworks/non-keyed/xilem_web-elements-splice/: Cargo.toml  Trunk.toml  package-lock.json  package.json  trunk.html
frameworks/non-keyed/xilem_web-elements-splice-hydration/: Cargo.toml  Trunk.toml  package-lock.json  package.json  trunk.html
frameworks/non-keyed/xilem_web-elements-splice-hydration-simple-events/: Cargo.toml  Trunk.toml  package-lock.json  package.json  trunk.html
frameworks/non-keyed/xilem_web-rewrite/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  trunk.html
frameworks/non-keyed/xilem_web-rewrite/bundled-dist/: index.html  js-framework-benchmark-non-keyed-xilem_web-rewrite.js  js-framework-benchmark-non-keyed-xilem_web-rewrite_bg.wasm
frameworks/non-keyed/xilem_web-rewrite/src/: main.rs
webdriver-ts/: results.json
webdriver-ts-results/: table.html
webdriver-ts-results/src/: results.ts
webdriver-ts/src/: puppeteerAccess.ts
(+30 files in other folders)
