[package]
name = "js-framework-benchmark-non-keyed-xilem_web-rewrite"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
js-sys = "*"
xilem_web = { git = "https://github.com/linebender/xilem.git" }

# [unstable]
# build-std = ["std", "panic_abort", "core", "alloc"]
# build-std-features = ["panic_immediate_abort"]

# [build]
# rustflags = [
#     "-Clto",
#     "-Zvirtual-function-elimination",
#     "-Zlocation-detail=none"
# ]

# Same as in the Stable section
[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false